--- a/components/header/header.template.html
+++ b/components/header/header.template.html
@@ -33,7 +33,7 @@
                     <div class="logo pull-left">
                         <a ui-sref="home"><img ng-src="{{$ctrl.company.logo}}" alt="" /></a>
                     </div>
-                    <div class="btn-group pull-right clearfix">
+                    <!--div class="btn-group pull-right clearfix">
                         <div class="btn-group">
                             <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
                                 USA
@@ -55,7 +55,7 @@
                                 <li><a href="">Pound</a></li>
                             </ul>
                         </div>
-                    </div>
+                    </div-->
                 </div>
                 <div class="col-md-8 clearfix">
                     <div class="shop-menu clearfix pull-right">
@@ -97,7 +97,7 @@
                                 <a ng-if="!me.hasChilds" href="#" ui-sref="{{me.href}}"
                                     ui-sref-active="active">{{me.name}} </a>
                             </li>                               
-                            <li><a href="404.html">404</a></li>
+                            
                        
                         </ul>
                     </div>
