--- a/components/slider/slider.template.html
+++ b/components/slider/slider.template.html
@@ -12,41 +12,41 @@
                     <div class="carousel-inner">
                         <div class="item active">
                             <div class="col-sm-6">
-                                <h1><span>E</span>-SHOPPER</h1>
-                                <h2>Free E-Commerce Template</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. </p>
+                                <h1><span>Sandeli</span>-Sabores</h1>
+                                <h2>Cualquier evento u ocasion especial</h2>
+                                <p>Escoje tu sabor preferido, color y tamaño 
+                                    Contactos . </p>
                                 <button type="button" class="btn btn-default get">Get it now</button>
                             </div>
                             <div class="col-sm-6">
-                                <img src="images/home/girl1.jpg" class="girl img-responsive" alt="" />
+                                <img src="images/banner/banner1.jpeg" class="girl img-responsive" alt="" />
                                 <img src="images/home/pricing.png" class="pricing" alt="" />
                             </div>
                         </div>
                         <div class="item">
                             <div class="col-sm-6">
-                                <h1><span>E</span>-SHOPPER</h1>
-                                <h2>100% Responsive Design</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. </p>
+                                <h1><span>Sandeli</span>-Sabores</h1>
+                                <h2>100% en Calidad y los mejores precios</h2>
+                                <p>Escoje tu sabor preferido, color y tamaño 
+                                    Contactos </p>
                                 <button type="button" class="btn btn-default get">Get it now</button>
                             </div>
                             <div class="col-sm-6">
-                                <img src="images/home/girl2.jpg" class="girl img-responsive" alt="" />
+                                <img src="images/banner/banner2.jpeg" class="girl img-responsive" alt="" />
                                 <img src="images/home/pricing.png" class="pricing" alt="" />
                             </div>
                         </div>
 
                         <div class="item">
                             <div class="col-sm-6">
-                                <h1><span>E</span>-SHOPPER</h1>
-                                <h2>Free Ecommerce Template</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. </p>
+                                <h1><span>Sandeli</span>-Sabores</h1>
+                                <h2>Cualquier evento u ocasion especial</h2>
+                                <p>Escoje tu sabor preferido, color y tamaño 
+                                    Contactos  </p>
                                 <button type="button" class="btn btn-default get">Get it now</button>
                             </div>
                             <div class="col-sm-6">
-                                <img src="images/home/girl3.jpg" class="girl img-responsive" alt="" />
+                                <img src="images/banner/banner3.jpeg" class="girl img-responsive" alt="" />
                                 <img src="images/home/pricing.png" class="pricing" alt="" />
                             </div>
                         </div>
