--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,9 @@ body {
 .product-image-wrapper .product-image{
     max-height: 200px;
 }
+.logo img{
+    max-height: 30px;
+}
 
 ul li {
     list-style: none;
