--- a/components/home/home.template.html
+++ b/components/home/home.template.html
@@ -1,6 +1,7 @@
 <slider></slider>
 
 <product-list products="$ctrl.products"></product-list>
+<contact></contact>
 
 <!--category-tab></category-tab>
 
