--- a/components/header/header.template.html
+++ b/components/header/header.template.html
@@ -72,7 +72,7 @@
     <!--/header-middle-->
 
     <!--header-bottom-->
-    <div class="header-bottom">
+    <!--div class="header-bottom">
 
         <div class="container">
             <div class="row">
@@ -109,6 +109,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div-->
     <!--/header-bottom-->
 </header>
